--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="row align-content-center">
                 <div
                     class="col-lg-2 p-xl-5 ps-sm-5 px-md-5 p-lg-4 px-lg-4 mx-lg-3  px-0 d-flex flex-lg-column  align-items-center justify-content-between justify-content-lg-start ">
-                    <div class=" z-3 ps-2">
-                        <img class="cursor_pointer logo_w_180 pt-2 pt-md-3 pt-lg-0   "
+                    <div class=" z-3 ps-2 ps-lg-5">
+                        <img class="cursor_pointer logo_w_180 pt-2 pt-md-3 pt-lg-0 ms-lg-5   "
                             src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
                     </div>
                     <ul class=" sm-screen pt-lg-5 mobile_view ps-xl-0" id="navbar">
@@ -327,7 +327,7 @@
               <div class="content me-xl-5">
                 <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black"> Big win in the SDNY
                 </h3>
-                <p class="font_roboto letter_space_01 new_news_card_content_first line_height_100 fs_lght font_400 pe-2">
+                <p class="font_roboto letter_space_01 new_news_card_content_first line_height_100 slider_color pe-2">
                   We obtained a massive win in Federal Court, in the
                   Southern District of New York, on behalf of our wonderful
                   client, an international travel company. In this internet
@@ -349,7 +349,7 @@
                 <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black">
                   Huge victory in the Appellate Division, First Department
                 </h3>
-                <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght font_400 pe-2">
+                <p class="font_roboto letter_space_01 line_height_100 new_news_card_content slider_color pe-2">
                   This was a big victory our client, a wonderful New York
                   cooperative corporation located in Queens, New York. On
                   appeal, a panel of judges in Manhattan agreed with us and
@@ -371,7 +371,7 @@
                 <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black">
                   Another big win in the SDNY
                 </h3>
-                <p class="font_roboto letter_space_01 line_height_100 new_news_card_content fs_lght font_400 pe-2">
+                <p class="font_roboto letter_space_01 line_height_100 new_news_card_content slider_color pe-2">
                   This was round two in a battle between our client, a
                   wonderful, well-known, and respected international travel
                   company, and another travel company over purported claims
@@ -393,7 +393,7 @@
                 <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black">
                   Esopus Updates Proposed Marina Camping Rules
                 </h3>
-                <p class="font_roboto letter_space_01 line_height_100 fs_lght font_400 pe-2">
+                <p class="font_roboto letter_space_01 line_height_100 slider_color pe-2">
                   Milad Boddoohi Quoted in the Daily Freeman Concerning The
                   Town of Esopus’ Passage of Zoning Regulations Governing
                   Marinas.
@@ -409,7 +409,7 @@
                 <h3 class="font_roboto letter_space_01 line_height_100 fw_700 fs_md text-black">
                   Esopus Seeks to Revise Zoning for Marina RV Lodging
                 </h3>
-                <p class="font_roboto letter_space_01 line_height_100 fs_lght font_400 pe-2">
+                <p class="font_roboto letter_space_01 line_height_100 slider_color pe-2">
                   Milad Boddoohi quoted in the Daily Freeman concerning Town
                   of Esopus vs. Castaways Marina
                 </p>
@@ -699,7 +699,7 @@
           slidesToScroll: 1,
           variableWidth: true,
           infinite: true,
-          // autoplay: true,
+          autoplay: true,
           autoplaySpeed: 3500,
           arrows: false,
           dots: false,
