--- a/news.html
+++ b/news.html
@@ -43,10 +43,10 @@
                 </div>
                 <div class="col-lg-10 p-0">
                   <div class="content d-md-flex m-flex-column justify-content-between">
-                    <div class="data pt-3 pt-sm-5 mt-lg-5 subject back_to_home ">
+                    <div class="data pt-3 pt-sm-5 mt-lg-5 subject back_to_home">
                    <div class="main_hover mt-lg-5">
                     <a
-                    class="color-peach d-flex align-items-center  back_to_top_header "
+                    class="color-peach d-flex align-items-center back_to_top_header"
                     href="index.html"
                   >
                     <svg class="icon_back"
@@ -81,7 +81,6 @@
                       <div
                         class="me-sm-auto border-grey-both px-sm-0 px-sm-3 animation-element bounce-up"
                       >
-                       
                       </div>
                       <div class="ms-md-auto animation-element bounce-down mt-3 mt-md-0">
                         <img src="./assets/img/news/svg/news-bg.svg" class="desktop subject img_header d-none d-md-block" />
@@ -90,7 +89,6 @@
                     </div>
                   </div>
                 </div>
-               
               </div>
             </div>
           </div>
@@ -100,7 +98,7 @@
             <div class="row row_padding justify-content-center justify-content-md-start">
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
-                        <img class="news-img" src="./assets/img/news/png/imgtwo.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgtwo.png" alt="card_img">
                        <div class="my_slider_card">
                         <a class="text_black " href="https://drive.google.com/file/d/1b79IHgWhT61aBNyW3oAHHSloIhkpIUsb/view" target="_blank" rel="noopener noreferrer" >
                           <div class="content  d-flex justify-content-between flex-column h-100">
@@ -133,7 +131,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-0 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imageone.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imageone.png"alt="news_img">
                      </div>
                        <div class="my_slider_card">
                         <a class="text_black"
@@ -169,7 +167,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 mt-lg-0 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgtwo.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgtwo.png" alt="img_two">
                      </div>
                        <div class="my_slider_card">
                         <a class="text_black"
@@ -206,7 +204,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgthree.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgthree.png" alt="img_three">
                      </div>
                        <div class="my_slider_card">
                         <a class="text_black"
@@ -235,7 +233,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgfour.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgfour.png" alt="img_four">
                      </div>
                      <div class="my_slider_card">
                       <a class=" text_black"
@@ -263,7 +261,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgfour.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgfour.png" alt="img_five">
                      </div>
                      <div class="my_slider_card">
                       <a class=" text_black"
@@ -292,7 +290,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgfive.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgfive.png" alt="img_six">
                      </div>
                       <div class="my_slider_card">
                         <a class="text_black"
@@ -322,7 +320,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgsix.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgsix.png" alt="img_seven">
                      </div>
                         <div class="my_slider_card">
                           <a class="text_black"
@@ -350,7 +348,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgseven.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgseven.png" alt="img_eight">
                      </div>
                      <div class="my_slider_card">
                       <a class="text_black"
@@ -382,7 +380,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgeight.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgeight.png" alt="img_ten">
                      </div>
                      <div class="my_slider_card">
                       <a class="text_black"
@@ -411,7 +409,7 @@
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
-                        <img class="news-img" src="./assets/img/news/png/imgeight.png" alt="">
+                        <img class="news-img" src="./assets/img/news/png/imgeight.png" alt="card_img_2">
                      </div>
                      <div class="my_slider_card">
                       <a class="text_black"
