--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div
                     class="col-lg-2 p-xl-5 ps-sm-5 px-md-5 p-lg-4 px-lg-4 mx-lg-3 px-0 d-flex flex-lg-column align-items-center justify-content-between justify-content-lg-start">
                     <div class="z-3 ps-2 ps-lg-5">
-                        <img class="cursor_pointer logo_w_180 pt-2 pt-md-3 pt-lg-0 ms-lg-5"
+                        <img class="cursor_pointer logo_w_180 pt-2 pt-md-3 pt-lg-0 ms-xl-5"
                             src="./assets/img/Homepage/svg/logo.svg" alt="nav_logo">
                     </div>
                     <ul class="sm-screen pt-lg-5 mobile_view ps-xl-0" id="navbar">
@@ -75,7 +75,7 @@
                         <p class="text-white fs_16 real_estate text-uppercase font_roboto mt-lg-5 pt-lg-5 pt-5">
                             REAL ESTATE. BUSINESS. CONSTRUCTION.
                         </p>
-                        <h1 class="text-white fs_4xl font_roboto adovcate_text text-uppercase mt_30 pb-4">we
+                        <h1 class="text-white fs_4xl font_roboto adovcate_text text-uppercase mt_30 pb-3">we
                             <span class="d-block">are</span><span class="text_orange d-block">
                                 advocates</span>
                         </h1>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div
-                    class="col-lg-5 z-2 d-lg-none position-relative px-0 z-n1 margin_negative sm p-0 d-flex">
+                    class="col-lg-5 z-2 d-lg-none position-relative margin_negative px-0 z-n1  sm p-0 d-flex">
                     <img class="header_bg z-n1" src="./assets/img/Homepage/svg/header-bg.svg" alt="header_bg">
                     <img class=" characts_img ms-auto" src="./assets/img/Homepage/webp/characters-home.webp"
                         alt="characters_img">
@@ -99,7 +99,7 @@
 </div>
    <!-- ---------------------section_2 start------------------------- -->
    <section id="press" class="bg-white pt-lg-1 pb-md-3 pb-lg-2 pb-xl-1 pt-xl-1 section_margin_bottom my-3">
-    <div class="coustam_container d-flex justify-content-center pt-5 pb-5 mt-md-5 mb-md-5">
+    <div class="coustam_container d-flex justify-content-center pt-md-5 pb-md-5 mt-md-5 mb-md-5">
         <h2 class="advise font_roboto fs_3xl mb-4 text-black mt-5 d-md-none">
             <span class="color_peach">We advise</span>
             <span class="color_peach">clients <span class="text-black">in New </span></span>
@@ -133,7 +133,7 @@
             <img class="img_wdth_section_real" src="./assets/img/Homepage/webp/dollar_2nd_section.png" alt="dollar_img">
           </div>
           <div class="col-12 col-md-6 order-0 order-md-1 bg-white p-sm-0 ps-md-5 pe-md-5 pt-md-5 col_border_right_bottom pb-3 pb-md-0">
-           <div class="ps-2  ps-md-5 ps-md-3 pb-4 pb-lg-0">
+           <div class="ps-2  ps-md-5 ps-md-3 px-lg-5 px-xl-0 pb-4 pb-lg-0">
             <div class="d-flex align-items-center mt-4 mt-lg-4">
               <div class="line_heading"></div>
               <p class="fs_xsm Letter_space_03 ms-2 color_peach text-uppercase fw_700 font_roboto">
@@ -141,14 +141,14 @@
               </p>
             </div>
             <h2 class="text-black line_height_100 letter_space_01 fw_700 fs_3xl font_roboto">Real Estate</h2>
-            <p class="font_opacity_07 font_16 font_600 line_height_100 text-black mt-4 font_roboto">
-              Purchases and Sales of Commercial and <span class="d-lg-block">
-                Residential Properties</span>
+            <p class="font_opacity_07 font_16 font_600 lht_100 text-black mt-4 font_roboto">
+              Purchases and Sales of Commercial and 
+                Residential Properties
             </p>
             <hr class="grey-hr" />
-                <p class="font_opacity_07 font_16 font_600 line_height_100 font_roboto text-black">
-                  General Counseling to Cooperatives and <span class="d-lg-block">
-                    Condominiums</span>
+                <p class="font_opacity_07 font_16 font_600 lht_100 font_roboto text-black">
+                  General Counseling to Cooperatives and
+                    Condominiums
                 </p>
                 <hr class="grey-hr" />
                 <p class="font_opacity_07 font_16 font_600 line_height_100 font_roboto text-black">Leasing</p>
@@ -165,17 +165,17 @@
     </section>
     <!-- We Deal With -->
     <section class="pt_150 bg-black section_margin_top">
-      <div class="custom_container pt-4">
+      <div class="custom_container">
         <div class="row m-0 p-0 align-items-center align-self-xl-start">
           <div class="col-12 col-md-6 p-0 ps-lg-5 pb-md-4 pb-4">
            <div class="pt-5 mt-4 mt-md-0 p-2 pt-lg-5 pt-xl-0 ps-lg-5 ms-md-4">
-            <div class="d-flex align-items-center mt-5 mt-xl-0">
+            <div class="d-flex align-items-center mt-md-5 mt-xl-0">
               <div class="line_heading"></div>
               <p class="fs_xsm Letter_space_03 ms-2 color_peach text-uppercase fw_700 font_roboto">
                 We deal with
               </p>
             </div>
-            <h2 class="letter_space_01 text-white font_roboto line_height_100 fw_700 fs_3xl mt-3">
+            <h2 class="letter_space_01 text-white font_roboto lht_100 fw_700 fs_3xl mt-3">
               Business <span class="d-xl-block">& Corporate</span>
               
             </h2>
@@ -189,18 +189,18 @@
               Entity Formations
             </p>
              <hr class="hr_business" />
-            <p class="font_opacity_07 font_16 font_roboto font_600 line_height_100 text-white letter-0-3">
-              Operating, Shareholder, Partnership, <span class="d-xxl-block">
-                and Joint Venture Agreements</span>
+            <p class="font_opacity_07 font_16 font_roboto font_600 lht_100 text-white letter-0-3">
+              Operating, Shareholder, Partnership,and Joint Venture
+                 Agreements
             </p>
              <hr class="hr_business" />
             <p class="font_opacity_07 font_16 font_roboto font_600 line_height_100 text-white letter-0-3">
-              Employment, Severance, and License <span class="d-xxl-block">
-                Agreements</span>
+              Employment, Severance, and License 
+                Agreements
             </p>
           </div>
         </div>
-        <div class="col-12 col-md-6 p-0 mt-5 pt-5 pt-md-0 mt-md-0 mt-xl-5 d-flex justify-content-end align-items-end text-end">
+        <div class="col-12 col-md-6 p-0 mt-md-5 pt-5 pt-md-0 mt-lg-0 mt-xl-5 d-flex justify-content-end align-items-end text-end">
           <div class="mt-md-5">
             <img  src="./assets/img/Homepage/svg/dollar-img.svg" class="img_bussiness" />
           </div>
@@ -217,7 +217,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-6 order-0 order-md-1 p-0 ps-md-5 ps-xl-0">
           <div class="content p-sm-3 px-4 pt-4 subject padding_top_200 ms-xl-5">
-            <div class="d-flex align-items-center mt-5 pt-5 pt-md-0  mt-xl-4 ">
+            <div class="d-flex align-items-center mt-md-5 pt-5 pt-md-0  mt-xl-4 ">
               <div class="line_heading"></div>
               <p class="fs_xsm Letter_space_03 font_roboto ms-2 color_peach text-uppercase fw_700 font_roboto">
                 We deal with
@@ -228,14 +228,14 @@
               AIA Contracts
             </p>
             <hr class="grey-hr" />
-            <p class="font_opacity_07 font_16 font_roboto font_600 line_height_100 text-black">
-              Construction and Development <span class="d-xxl-block">
-                Agreements</span>
+            <p class="font_opacity_07 font_16 font_roboto font_600 lht_100 text-black">
+              Construction and Development 
+                Agreements
             </p>
             <hr class="grey-hr" />
-            <p class="font_opacity_07 font_16 font_roboto font_600 line_height_100 text-black">
-              Access, License Agreements, and <span class="d-xxl-block">
-                RPAPL 881s</span>
+            <p class="font_opacity_07 font_16 font_roboto font_600 lht_100 text-black">
+              Access, License Agreements, and
+                RPAPL 881s
             </p>
             <hr class="grey-hr" />
             <p class="font_opacity_07 font_16 font_roboto font_600 line_height_100 text-black">Mechanic's Liens</p>
@@ -245,7 +245,7 @@
     </section>
     <!-- Litigation -->
     <section class="padding_top_150 pb-4 pb-md-0 bg-black section_margin_top">
-      <div class="custom_container pb-2">
+      <div class="custom_container pb-5 pb-md-2">
         <div class="row p-lg-5 ps-lg-5 pb_100">
           <div class="col-12 col-md-7 col-lg-6 p-0 ps-md-5">
           <div class="content p-sm-3 p-4 ps-lg-5 subject text_margin_bottom">
@@ -268,9 +268,9 @@
               Construction Defects
             </p>
             <hr class="hr_business background-white" />
-            <p class="font_opacity_07 font_16 font_roboto line_height_100 font_600 text-white">
-              Business, Commercial, and <span class="d-xxl-block"> Contractual Disputes</span>
-            </p>
+            <p class="font_opacity_07 font_16 font_roboto lht_100 font_600 text-white">
+              Business, Commercial, and  Contractual Disputes
+            </p>  
             <hr class="hr_business background-white" />
             <p class="font_opacity_07 font_16 font_roboto line_height_100 font_600 text-white">
               Employment Disputes
@@ -280,9 +280,9 @@
               Arbitrations/Mediations
             </p>
             <hr class="hr_business background-white" />
-            <p class="font_opacity_07 font_16 font_roboto line_height_100 font_600 text-white">
-              Medical Malpractice <span class="d-xxl-block">
-                and Personal Injury</span>
+            <p class="font_opacity_07 font_16 font_roboto lht_100 font_600 text-white">
+              Medical Malpractice 
+                and Personal Injury
             </p>
           </div>
         </div>
@@ -318,7 +318,7 @@
            </div>
         </div>
            <div
-          class="news-slider align-items-center mt-5 mt-md-5 pb-5 ps-lg-5 ms-lg-5 ps-md-5 d-flex justify-content-center">
+          class="news-slider align-items-center mt-5 mt-md-5 pb-md-5 ps-lg-5 ms-lg-5 ps-md-5 d-flex justify-content-center">
           <div class="slide-content me-4 me-md-0 me-lg-4">
             <a class="text-black" href="https://drive.google.com/file/d/1b79IHgWhT61aBNyW3oAHHSloIhkpIUsb/view"
               target="_blank" rel="noopener noreferrer">
@@ -432,7 +432,7 @@
               <h4 class="letter_space_01 font_roboto text-white line_height_100 fw_400 text_20 mb-0 mt-4 pt-2 pt-md-3">
                 Attorney Milad Boddoohi
               </h4>
-              <p class="letter_space_01 font_roboto line_height_100 font_600 text_16 text-white font_opacity_07 mb-3">
+              <p class="letter_space_01 font_roboto line_height_100 font_600 text_16 text-white font_opacity_07 mb-3 pt-1">
                 Partner & Co-Founder
               </p>
               <button class="fs_xsm font_600 font_roboto button_bio text-white">Bio</button>
@@ -500,7 +500,7 @@
               <h4 class="letter_space_01 font_roboto text-black line_height_100 fonts_400 fs_md mb-0 mt-5">
                 Cheryl Friedlander
               </h4>
-              <p class="letter_space_01 font_roboto line_height_100 font_600 text_16 text-black font_opacity_07 mb-3">
+              <p class="letter_space_01 font_roboto line_height_100 font_600 text_16 text-black font_opacity_07 mb-3 pt-2">
                 Partner & Co-Founder
               </p>
               <button class="fs_xsm font_600 font_roboto button_bio text-white">Bio</button>
@@ -600,7 +600,7 @@
                   <br>
                   <input class="form_contact" type="email" name="email" placeholder="Email">
                   <br>
-                  <input class="form_contact" type="phone number" name="phone" placeholder="Phone">
+                  <input class="form_contact" type="number" id="number" name="phone" placeholder="Phone">
                   <br>
                   <textarea class="form_contact" type="message" name="message" placeholder="How We Can Help ?"></textarea>
                   <input class="contact_form_btn" type="submit" value="Submit">
@@ -610,15 +610,15 @@
       </div>
   </section>
    <!-- ---------------------footer_start-------------------------- -->
-   <section class="bg-black footer_margin section_margin_top">
+   <section class="bg-black footer_margin section_margin_top mb-0 position-relative">
     <div class="coustam_container pb-5 pb-lg-0 pt-xl-2">
         <div class="row justify-content-center justify-content-lg-between text-center">
-            <div class="col-lg-1 d-none d-lg-block p-0">
+            <div class="col-lg-1 d-none d-lg-block p-0 ">
                 <div>
-                    <img class="mt-3 footer_img " src="./assets/img/Homepage/svg/footer-img.svg" alt="footer_img">
+                    <img class=" footer_img " src="./assets/img/Homepage/webp/footer-img.webp" alt="footer_img">
                 </div>
             </div>
-            <div class="col-12 col-md-10 col-lg-9 px-0 mb-0 px-lg-3 pt-md-2 pt-lg-5 d-flex justify-sm-content-center align-items-sm-center align-items-lg-start flex-column">
+            <div class="col-12 col-md-12 col-lg-9 px-0 mb-0 ps-lg-3  pt-md-2 pt-lg-5 d-flex justify-sm-content-center align-items-sm-center align-items-lg-start flex-column">
                 <div class="pt-5 mt-2 mt-md-5 pt-md-4 mt-lg-5 d-sm-flex px-2">
                     <img class="footer_logo_width cursor_pointer" src="./assets/img/Homepage/svg/logo.svg"
                         alt="footer_logo_width">
