--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   <body class="overflow-x-hidden">
     <div class="bg-black">
    <div class="max_width mx-auto">
-   <section class="position-relative min_h_100 overflow-hidden" id="banner-top">
+   <section class="position-relative min_h_100 overflow-hidden pb-xl-5" id="banner-top">
     <div class="z-n1 d-lg-block d-none">
         <img class="headers_bg" src="./assets/img/Homepage/svg/header-bg.svg" alt="header_bg">
         <img class="characters_img" src="./assets/img/Homepage/webp/characters-home.webp"
             alt="characters_img">
     </div>
     <nav>
-        <div class="coustam_container">
+        <div class="coustam_container pb-xl-3">
             <div class="row align-content-center">
                 <div
                     class="col-lg-2 p-xl-5 ps-sm-5 px-md-5 p-lg-4 px-lg-4 mx-lg-3 px-0 d-flex flex-lg-column align-items-center justify-content-between justify-content-lg-start">
